# dcss_supplementary

./: LICENSE  PKG-INFO  README.md  environment-gt-mac-linux.yml  environment-no-gt-win.yml  environment-osx-arm64.yml  environment-windows-no-gt.yml  environment.yml  environment_apple_silicon.yml  environment_minimal.yml  setup.cfg
advice/: Jillian_Anderson_Complex_Problems.md  Jillian_Anderson_ML_first_time.md  Pierson_Browne_PDPP  Pierson_Browne_PDPP.md  Rochelle_Terman
chapter_notebooks/: chapter_1.ipynb  chapter_10.ipynb  chapter_11.ipynb  chapter_12.ipynb  chapter_13.ipynb  chapter_14.ipynb  chapter_15.ipynb  chapter_16.ipynb  chapter_17.ipynb  chapter_2.ipynb  chapter_20.ipynb  chapter_21.ipynb  chapter_23.ipynb  chapter_25.ipynb  chapter_26.ipynb  chapter_27.ipynb  chapter_28.ipynb  chapter_29.ipynb  chapter_3.ipynb  chapter_30.ipynb  chapter_31.ipynb  chapter_32.ipynb  chapter_4.ipynb  chapter_5.ipynb  chapter_6.ipynb  chapter_7.ipynb  chapter_8.ipynb  chapter_9.ipynb
course_assignments/module_01/: module_1_assignment
course_assignments/module_02/: m02_notebook.ipynb
course_assignments/module_03/: m03_notebook.ipynb
course_assignments/module_04/: m04_notebook.ipynb
course_assignments/module_05/: m05_notebook.ipynb
course_assignments/module_06/: m06_notebook.ipynb
course_assignments/module_07/: m07_notebook.ipynb
course_assignments/module_08/: m08_notebook.ipynb
course_assignments/module_09/: m09_notebook.ipynb
data/2020_election/: .need  (+1 more)
dcss_environment/: environment-gt-mac-linux.yml  environment-no-gt-win.yml  minimal.yml
(+493 files in other folders)
