[metadata]
name = dcss
version = 1.0.2
author = John McLevey
author_email = john.mclevey@uwaterloo.ca
description = Utilities for the book Doing Computational Social Science
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UWNETLAB/doing_computational_social_science
project_urls = 
	Bug Tracker = https://github.com/UWNETLAB/doing_computational_social_science/issues
classifiers = 
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir = 
	= src
packages = find:
platforms = any
install_requires = 
	pandas
	numpy
	html2text
	pyyaml
	spacy
	matplotlib
	seaborn
	pyprojroot
	pymc3
	arviz
	networkx
	joblib
	scikit-learn
	gensim
python_requires = >=3.6

[options.packages.find]
where = src

[egg_info]
tag_build = 
tag_date = 0

